--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,12 @@
       </div>
 
       <div class="add-todo">
-        <form>
+        <form class="todo-form">
           <input
             type="text"
             name="todo-input"
             id="todo-input"
             placeholder="Add Tasks Here"
-            required
           />
           <button type="submit">+</button>
         </form>
@@ -39,6 +38,7 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script type="module" src="postList.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
